# multiAgent-AI

./: .env.example  .gitignore  README.md  agents.py  crew.py  pyproject.toml  requirements.txt  tools.py
CephViz/: agent.py
CephViz/backend/: Dockerfile  README.md  functionality.py  requirements.txt
CephViz/frontend/: requirements.txt
Observability/: .gitignore
Observability/backend/: agent.py  connection.py  metrics_operations.py  scrape_metricsdata.py  watsonx.py
agentic-ai-perf-bot/frontend/: app.py
bugIntelligence/: app.py
data/: sample_metrics.txt  sync-modules.rst.txt
llm/: llm_client.py
maverick/: README.md
maverick/backend/: ceph_upstream.py  connect_bugzilla.py  parse_documentation.py
maverick/backend/auth/: database.py
maverick/frontend/: Octopus.json  app.py  ceph_troubleshooting_assistant.py  fancy.py  frontend.py  requirements.txt
scripts/: test_pydantic_output.py
src/: __init__.py
src/agents/: __init__.py  agents.py
src/agents/CephViz/backend/: session_manager.py
src/agents/CephViz/frontend/: Dockerfile  frontend.py
src/agents/Observability/backend/: agent.py  connection.py  metrics_operations.py  scrape_metricsdata.py
src/agents/agentic-ai-perf-bot/backend/: perfomance.py
src/agents/agentic-ai-perf-bot/frontend/: app.py
src/agents/bugIntelligence/: README.md  app.py  app_local.py  requirements.txt
src/agents/maverick/: agent.py
src/agents/maverick/backend/: ceph_upstream.py  check_kcs.py  parse_documentation.py  requirements.txt
src/agents/maverick/backend/auth/: auth.py
src/agents/maverick/frontend/: ceph_troubleshooting_assistant.py
src/agents/perf/: .gitignore
src/crew/: crew.py
src/frontend/: app.py  helpers.py
src/llm/: llm_client.py
src/orchestration/: crew.py  crew_agents.py  flow.py  orchestrator.py  prompts.py  tasks.py  tools.py
src/orchestrator/: orchestrator.py  prompts.py
src/scripts/: scrape_ceph_documentation.py
src/tasks/: tasks.py
src/utils/: agents.py
(+1 files in other folders)
