[project]
name = "multiagent-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.5",
    "argparse>=1.4.0",
    "bcrypt>=4.3.0",
    "crewai>=0.118.0",
    "crewai-tools>=0.43.0",
    "huggingface-hub>=0.30.2",
    "ibm-watson-machine-learning>=1.0.367",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-huggingface>=0.1.2",
    "ollama>=0.4.8",
    "paramiko>=3.5.1",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.12.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
